Thu Aug  8 22:02:01 EDT 2002	Brian Bruns <camber@ais.org>
	+ src/ctlib/cs.c: set context parent
	+ src/ctlib/ctutil.c: call context handler if conn not set
	+ src/dblib/dblib.c: set context parent
	+ src/odbc/odbc.c: set context parent
	+ src/tds/util.c: context parent convience functions	
	+ configure.in: add checks for various 64bit int types
	+ acconfig.h: add HAVE_INT64
	+ include/tds.h.in: make TDS_INT8 a substituted value
	+ src/apps/tsql.c: fix call to tds_convert

Thu Aug  8 00:13:30 EDT 2002	JK Lowden <jklowden@schemamania.org>
	+ include/tds.h.in	tdsmoney now a union of TDS_INT8 and TDS_OLD_MONEY
	+ src/tds/convert.c	reinstituted numeric-based money handling.  
	* src/odbc/Makefile.am	Remove glib library dependency from ODBC

Tue Aug  6 00:16:34 EDT 2002	JK Lowden <jklowden@schemamania.org>
	+ include/tds.h.in	cosmetic changes
	+ include/sybdb.h 	changed DBDEAD to dbdead; provided macro.  Aids binary compatibility.
	+ src/dblib/dblib.c	dbconvert returns 0 if tds_convert returns 0
	+ src/tds/convert.c	char->bit disallows <0
				char->int allows embedded spaces
				hex->int is more efficient

Tue Jul 16 01:16:29 EDT 2002	JK Lowden <jklowden@schemamania.org>
	+ src/tds/tds_willconvert.h added, to support dbwillconvert
	+ src/tds/convert.c slightly modified to insert comments in tds_willconvert.h
	+ src/ctlib/ctutil.c, rename call to tds_reset_msg to tds_reset_msg_info

Mon Jul 15 03:29:58 EDT 2002	Brian Bruns <camber@ais.org>
	implemented TDSCONTEXT changes for message handling, affecting:
	+ include/cspublic.h
	+ include/tdsconvert.h
	+ include/tdsodbc.h
	+ src/ctlib/ct.c
	+ src/odbc/convert_sql2string.c
	+ src/odbc/convert_sql2string.h
	+ src/odbc/convert_tds2sql.c
	+ src/odbc/convert_tds2sql.h
	+ src/odbc/odbc.c
	+ src/odbc/odbc_util.c
	+ src/odbc/prepare_query.c
	+ src/server/login.c
	+ src/tds/convert.c
	+ src/tds/login.c
	+ src/tds/mem.c
	+ src/tds/query.c
	+ src/tds/read.c
	+ src/tds/write.c
	+ src/tds/unittests/common.c	