@@ -21,10 +21,11 @@
 #define _tds_h_
 
 static char rcsid_tds_h[]=
-	 "$Id: tds.h.in,v 1.28 2002/08/09 03:32:41 brianb Exp $";
+	 "$Id: tds.h.in,v 1.29 2002/08/11 16:36:26 brianb Exp $";
 static void *no_unused_tds_h_warn[]={rcsid_tds_h, no_unused_tds_h_warn};
 
 #include "tds_configs.h"
+#include "config.h"
 
 #if HAVE_ICONV
 #include <iconv.h>
