@@ -1,3 +1,6 @@
+Sun Aug 11 12:36:40 EDT 2002	Brian Bruns <camber@ais.org>
+	+ include/tds.h.in: add include config.h
+
 Thu Aug  8 22:02:01 EDT 2002	Brian Bruns <camber@ais.org>
 	+ src/ctlib/cs.c: set context parent
 	+ src/ctlib/ctutil.c: call context handler if conn not set
